main.css
/* ... */
.info-block{
    margin-top: 33px;
    margin-left: 56px;
}

.info-block-right{
    margin-top: 33px;
    margin-left: auto;
    margin-right: 54px;
}

.members-shadow{
    width: 484px;
    height: 400px;
    background: #71A894;
    border-radius: 16px;
    margin-left: auto;
    margin-right: 120px;
}

.members-block{
    width: 484px;
    height: 400px;
    background: #FFFFFF;
    border: 4px solid #303031;
    border-radius: 16px;
    padding: 32px 40px;
    margin-left: auto;
    margin-right: 120px;
    margin: -16px
}

.members-header{
    width: 131px;
    height: 40px;

    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 700;
    font-size: 32px;
    line-height: 40px;
    letter-spacing: -0.02em;

    color: #303031;
}

.members-item{
    margin-bottom: 24px;
}

.members-header{
    margin-bottom: 32px;
}

.members-img{
    width: 72px;
    height: 72px;
    display: inline-block;
    margin-right: 16px;
}

.members-item-text{
    display: inline-block;
    vertical-align: middle;

}

.members-name{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 26px;
    letter-spacing: -0.02em;
    color: #303031;   
}

.members-description{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 26px;
    letter-spacing: -0.02em;
    color: #66645E;
}

.section-info ~ .dotted-bg{
    background: url('imgs/person-dotted-background.png');
    background-repeat: no-repeat;
    background-position: 0% 100%;
    height: 476px;
}

.person-card{
    width: 484px;
    height: 412px;
    border: 4px solid #303031;
    border-radius: 16px;
    margin-left: 80px;
    padding: 36px 40px 32px 40px;
    background-color: #FFFFFF;
}

.person-card > .members-item > .members-item-text > .members-description {
    margin-top: 8px; 
    font-weight: 600;
}

.person-description{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #303031;
}

.person-stats{
    margin-top: 24px;
    margin-bottom: 28px;
}

.stats-header{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #66645E;
    margin-bottom: 12px;
}

.stats-value{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    line-height: 32px;
    letter-spacing: -0.02em;
    color: #303031;
}

.stats-button{
    width: 404px;
    padding: 12px 24px;
    background: #303031;
    border-radius: 16px;

    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    line-height: 32px;
    letter-spacing: -0.02em;
    color: #FFFFFF;
}

.info3-block{
    margin-top: 82px;
    margin-left: 56px;
}

.info3-cards-container{
    margin-right: 40px;
    margin-left: auto;
}

.info3-info-card-shadow{
    width: 544px;
    height: 164px;
    background: #71A894;
    border-radius: 16px;
    position: relative;
    left: 8px;
    bottom: 156px;
    z-index: -1;
}

.info3-info-card{
    width: 560px;
    height: 164px;
    border: 4px solid #303031;
    border-radius: 16px;
    margin-right: 37px;
    background-color: #FFFFFF;
    padding: 16px 24px 24px 24px;
}

.info3-info-card-header{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #303031;
    margin-top: 8px;
    margin-bottom: 16px;
}

.info3-info-card-text{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #303031;
}

.info3-info-card-green-oval{
    display: inline-block;
    margin-left: auto;
    margin-bottom: auto;
    vertical-align: top;

    padding: 6px 8px 0px 8px;
    background: #71A894;
    border-radius: 40px;

    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #FFFFFF;
}

.info3-applicants-card{
    display: inline-block;
    width: 381px;
    height: 288px;
    background: #F3F0EA;
    border: 4px solid #303031;
    border-radius: 16px;
    margin-top: 24px;
    position: relative;
    right: 37px;
    bottom: 156px;

    padding: 32px 40px;
}

.info3-applicants-header{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 32px;
    letter-spacing: -0.02em;
    color: #303031;
    margin-bottom: 24px;
}

.info3-person-card{
    display: inline-block;
    width: 240px;
    height: 288px;
    border: 4px solid #71A894;
    border-radius: 16px;
    position: relative;
    right: 24px;
    bottom: 140px;
    padding: 24px;
}

.info3-person-card-img{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.info3-person-card-name{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 700;
    font-size: 20px;
    line-height: 24px;
    text-align: center;
    letter-spacing: -0.02em;
    color: #303031;

    margin-top: 16px;
    margin-bottom: 4px;
}

.info3-person-card-profession{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    text-align: center;
    letter-spacing: -0.02em;

    color: #66645E;
}

.info3-person-card-ration-text{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: -0.02em;
    color: #303031;
    padding: 0.35rem;
}

.info3-person-card-ration{
    font-family: 'Novel Mono Pro';
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 24px;
    color: #303031
}
/* ... */

